<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.MenuFragment">


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/steam_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steam"
                app:chipIcon="@drawable/ic_steam"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ubisoft_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubisoft"
                app:chipIcon="@drawable/ic_ubisoft"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/origin_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                app:chipIcon="@drawable/ic_origin"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/epic_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/epic"
                app:chipIcon="@drawable/ic_epic"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/playstation_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playstation"
                app:chipIcon="@drawable/ic_playstation"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/xbox_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xbox"
                app:chipIcon="@drawable/ic_xbox"
                app:chipIconEnabled="true" />


        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>